--- a/aspnet-core/src/Neco.Abp.ConsulConfiguration.Web/Pages/Index.cshtml
+++ b/aspnet-core/src/Neco.Abp.ConsulConfiguration.Web/Pages/Index.cshtml
@@ -17,6 +17,7 @@
             <h5 class="m-1"> <i class="fas fa-rocket"></i> Congratulations, <strong>ConsulConfiguration</strong> is successfully running!</h5>
         </div>
         <h1>Welcome to the Application</h1>
+        <h2>@Model.Main</h2>
 
         <p class="lead px-lg-5 mx-lg-5">@L["LongWelcomeMessage"]</p>
 
